# Gazebo-Car-DepthCamera

./: Readme.md
mobile_robot_sim/src/practice_pkg/: CMakeLists.txt  package.xml
mobile_robot_sim/src/practice_pkg/car_kinect/: model.config  model.sdf
ros_opencv_sub/: CMakeLists.txt
ros_opencv_sub/src/: ros_opencv_sub.cpp
